Fixed z-indexing issue with hidden PO's that have a single detail query

--- a/src/WebComponents/PersistentObject/persistent-object.scss
+++ b/src/WebComponents/PersistentObject/persistent-object.scss
@@ -105,6 +105,7 @@ $tabsBG: #f1f1f1;
             vi-action-bar {
                 padding-top: 0;
                 z-index: 1;
+                border-bottom-width: 0;
                 @apply(--theme-shadow);
             }
         }
